--- a/src/pages/clinic-manager/clinic-manager.scss
+++ b/src/pages/clinic-manager/clinic-manager.scss
@@ -15,4 +15,15 @@ clinic-manager-page {
     a {
 		color: $accent-dark;
 	}
+
+    .clinic-container{
+        padding: 5px;
+    }
+
+    .speil {
+        padding: 20px;
+        ion-label{
+            white-space: normal;
+        }
+    }
 }
