--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -83,30 +83,30 @@
                 </ion-col>
             </ion-row>
             <ion-row class="contact-control">
-                <ion-col col-6 col-sm-6 col-md-6>
+                <ion-col col-6 col-sm-5 col-md-4>
                     <ion-label class="form-label">Contact <span *ngIf="isEditMode()">*</span></ion-label>
                 </ion-col>
-                <ion-col col-6 col-sm-6 col-md-6>
+                <ion-col col-6 col-sm-5 col-md-4>
                     <ion-label class="form-link" (click)="addContact($event)" color="accent-dark">+ add Contact</ion-label>
                 </ion-col>
             </ion-row>
             <ion-row class="contact-header">
-                <ion-col col-4 col-sm-4 col-md-4>
+                <ion-col col-4 col-sm-3 col-md-3>
                     <ion-label class="form-label">Type</ion-label>
                 </ion-col>
-                <ion-col col-5 col-sm-5 col-md-5>
+                <ion-col col-6 col-sm-6 col-md-4>
                     <ion-label class="form-label">Detail</ion-label>
                 </ion-col>
             </ion-row>
             <ion-row class="contact-details" *ngFor="let contact of contacts.value;let idx=index">
-                <ion-col col-4 col-sm-4 col-md-4>
+                <ion-col col-4 col-sm-3 col-md-3>
                     <ion-label>{{contactType[contact?.contactType]}}</ion-label>
                 </ion-col>
-                <ion-col col-5 col-sm-5 col-md-5>
+                <ion-col col-6 col-sm-6 col-md-4>
                     <ion-label>{{contact?.contact}}</ion-label>
                 </ion-col>
-                <ion-col col-3 col-sm-3 col-md-3>
-                    <ion-icon name="trash" (click)="removeContact($event,contact, idx)" color="accent-dark"></ion-icon>
+                <ion-col col-2 col-sm-1 col-md-1>
+                    <ion-icon name="close" (click)="removeContact($event,contact, idx)" color="accent-dark"></ion-icon>
                 </ion-col>
             </ion-row>
             <ion-row *ngIf="errors.contactNo">
