--- a/src/components/profile-form/profile-form.scss
+++ b/src/components/profile-form/profile-form.scss
@@ -1,5 +1,5 @@
 profile-form{
-	.contact-details{
+	.contact-details ion-icon{
 		top: 50%; 
         margin-top: -14px;
         position: absolute;
