implemented account page in side menu. added limiter for delete clinic

--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -1,20 +1,20 @@
-<form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="profileForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
+<form [formGroup]="profileForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
     <div class="row form-group">
         <ion-grid>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Last Name <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Last Name *</ion-label>
                     <ion-item round>
-                        <ion-input name="lastName" formControlName="lastName" [disabled]="!isEditMode()"></ion-input>
+                        <ion-input name="lastName" formControlName="lastName"></ion-input>
                     </ion-item>
                     <div class="error-message" *ngIf="profileForm.get('lastName')?.dirty &&  profileForm.get('lastName').invalid">
                         {{ errors.lastName }}
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">First Name <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">First Name *</ion-label>
                     <ion-item round>
-                        <ion-input name="firstName" formControlName="firstName" [disabled]="!isEditMode()"></ion-input>
+                        <ion-input name="firstName" formControlName="firstName"></ion-input>
                     </ion-item>
                     <div class="error-message" *ngIf="profileForm.get('firstName')?.dirty &&  profileForm.get('firstName').invalid">
                         {{ errors.firstName }}
@@ -23,16 +23,16 @@
                 <ion-col col-12 col-sm-12 col-md-4>
                     <ion-label class="form-label">Middle Name</ion-label>
                     <ion-item round>
-                        <ion-input name="middleName" formControlName="middleName" [disabled]="!isEditMode()"></ion-input>
+                        <ion-input name="middleName" formControlName="middleName"></ion-input>
                     </ion-item>
                 </ion-col>
             </ion-row>
             <div [hidden]="formType !== 'D'">
                 <ion-row>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-label class="form-label">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">PRC License *</ion-label>
                         <ion-item round>
-                            <ion-input type="number" name="prc" formControlName="prc" [disabled]="!isEditMode()"></ion-input>
+                            <ion-input type="number" name="prc" formControlName="prc"></ion-input>
                         </ion-item>
                         <div class="error-message" *ngIf="profileForm.get('prc')?.dirty && profileForm.get('prc').invalid">
                             {{ errors.prc }}
@@ -41,7 +41,7 @@
                     <ion-col col-12 col-sm-6 col-md-6>
                         <ion-label class="form-label">PTR</ion-label>
                         <ion-item round>
-                            <ion-input type="number" name="ptr" formControlName="ptr" [disabled]="!isEditMode()"></ion-input>
+                            <ion-input type="number" name="ptr" formControlName="ptr"></ion-input>
                         </ion-item>
                         <div class="error-message" *ngIf="profileForm.get('ptr')?.dirty &&  profileForm.get('ptr').invalid">
                             {{ errors.ptr }}
@@ -50,7 +50,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-label class="form-label">Medical Arts <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">Medical Arts *</ion-label>
                         <ion-item clean>
                             <ion-select class="options" name="medicalArt" formControlName="medicalArt">
                                 <ion-option *ngFor="let type of medicalArts; let i = index" [value]="i">{{ type }}</ion-option>
@@ -61,9 +61,9 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-label class="form-label">Specialization <span *ngIf="isEditMode()">*</span></ion-label>
+                        <ion-label class="form-label">Specialization *</ion-label>
                         <ion-item round>
-                            <ion-input name="specialization" formControlName="specialization" [disabled]="!isEditMode()"></ion-input>
+                            <ion-input name="specialization" formControlName="specialization"></ion-input>
                         </ion-item>
                         <div class="error-message" *ngIf="profileForm.get('specialization')?.dirty &&  profileForm.get('specialization').invalid">
                             {{ errors.specialization }}
@@ -73,9 +73,9 @@
             </div>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-6>
-                    <ion-label class="form-label">Email <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Email *</ion-label>
                     <ion-item round>
-                        <ion-input type="email" name="email" formControlName="email" [disabled]="!isEditMode()"></ion-input>
+                        <ion-input type="email" name="email" formControlName="email"></ion-input>
                     </ion-item>
                     <div class="error-message" *ngIf="profileForm.get('email')?.dirty &&  profileForm.get('email').invalid">
                         {{ errors.email }}
@@ -84,7 +84,7 @@
             </ion-row>
             <ion-row class="contact-control">
                 <ion-col col-6 col-sm-5 col-md-4>
-                    <ion-label class="form-label">Contact <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Contact *</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-5 col-md-4>
                     <ion-label class="form-link" (click)="addContact($event)" color="accent-dark">+ add Contact</ion-label>
@@ -118,22 +118,21 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12 col-sm-6 col-md-6>
-                    <ion-label class="form-label">Gender <span *ngIf="isEditMode()">*</span></ion-label>
-                    <ion-list *ngIf="isEditMode()" radio-group name="gender" formControlName="gender">
+                    <ion-label class="form-label">Gender *</ion-label>
+                    <ion-list radio-group name="gender" formControlName="gender">
                         <ion-item *ngFor="let gender of genderList; let i = index">
-                            <ion-radio color="primary" [value]="i" [disabled]="!isEditMode()"></ion-radio>
+                            <ion-radio color="primary" [value]="i"></ion-radio>
                             <ion-label>{{ gender }}</ion-label>
                         </ion-item>
                     </ion-list>
-                    <p *ngIf="!isEditMode()">{{ genderList[profileForm.get('gender').value] }}</p>
-                    <div class="error-message" *ngIf="isEditMode() && profileForm.get('gender')?.dirty &&  profileForm.get('gender').invalid">
+                    <div class="error-message" *ngIf="profileForm.get('gender')?.dirty &&  profileForm.get('gender').invalid">
                         {{ errors.gender }}
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-6 col-md-6>
                     <ion-row>
                         <ion-col col-12 col-sm-12 col-md-12>
-                            <ion-label class="form-label">Birth Date <span *ngIf="isEditMode()">*</span></ion-label>
+                            <ion-label class="form-label">Birth Date *</ion-label>
                         </ion-col>
 
                         <ion-col col-4 col-sm-4 col-md-4>
@@ -158,9 +157,6 @@
                             </ion-item>
                         </ion-col>
                         <ion-col col-12 col-sm-12 col-md-12>
-                            <ion-item round *ngIf="!isEditMode()">
-                                <ion-input type="date" name="birthDate" formControlName="birthDate" [disabled]="!isEditMode()"></ion-input>
-                            </ion-item>
                             <div class="error-message" *ngIf="profileForm.get('year')?.dirty &&  profileForm.get('year').invalid">
                                 {{ errors.year }}
                             </div>
@@ -178,7 +174,7 @@
                 <ion-col>
                     <ion-label class="form-label">Address</ion-label>
                     <ion-item round>
-                        <ion-textarea name="address" formControlName="address" [disabled]="!isEditMode()"></ion-textarea>
+                        <ion-textarea name="address" formControlName="address"></ion-textarea>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -186,8 +182,7 @@
         </ion-grid>
     </div>
     <div center>
-        <xhr-button #xhr round large color="accent" type="submit" [hidden]="!isEditMode()" [disabled]="profileForm.pristine || form.pristine"
-            (xhrClick)="submitForm($event)">
+        <xhr-button #xhr round large color="accent" type="submit" [disabled]="profileForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
             Submit
         </xhr-button>
     </div>
