--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -468,3 +468,8 @@ ion-icon[text]{
 	font-family: 'arial';
 	font-size: .3rem;
 }
+
+ion-item, button[ion-item]{
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
