--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,27 +1,54 @@
 tabs{
-	ion-menu .scroll-content{
-		background: $primary-light;
-		button{
-			ion-icon{
-				margin-right: 5px;
+	ion-menu{
+		.scroll-content{
+			.side-menu-header{
+				background: $primary-light;
+				display: flex;
+				.img-container{
+					padding: 20px;
+					img{
+						height: 80px;
+						border-radius: 50%;
+					}
+				}
+				.account-detail{
+					flex:1;
+					h4{
+						color: $light;
+					    margin-bottom: 0;
+					    margin-top: 2.7rem;
+					}
+					p{
+						color: $light;
+						margin-top: 0;
+						margin-bottom: 0;
+					}
+				}
+			}
+			.clinic-detail{
+			    display: flex;
+			    box-shadow: 1px 1px 0.8px rgba(0,0,0,0.3);
+			    margin-bottom: 10px;
+			    p{
+		    	    flex: 1;
+				    margin-left: 18px;
+			    }
+			    ion-icon{
+		    	    font-size: 42px;
+				    padding: 12px;
+				    z-index: 1;
+			    }
+			}
+			button{
+				ion-icon{
+					margin-right: 15px;
+					font-size: 28px;
+				}
 			}
 		}
 	}
 	.tabbar{
 		background: $primary-light !important;
-	}
-	.side-menu-header{
-		display: flex;
-		.img-container{
-			padding: 20px;
-			img{
-				height: 80px;
-				border-radius: 50%;
-			}
-		}
-		.account-detail{
-			flex:1;
-		}
 	}
 
 }
