bug fix on accessing null value upon subscribing to Storage Behavioral Subject

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </ion-list>
-    <div center>
+    <div text-center>
         <xhr-button  #xhr round large color="accent" [disabled]="changePasswordForm.pristine || form.pristine" (xhrClick)="submitForm(xhr)"> Change Password </xhr-button>
     </div>
 </form>
