--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -181,7 +181,7 @@
 
         </ion-grid>
     </div>
-    <div center>
+    <div text-center>
         <xhr-button #xhr round large color="accent" type="submit" [disabled]="profileForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
             Submit
         </xhr-button>
