--- a/src/components/search-user-modal/search-user-modal.html
+++ b/src/components/search-user-modal/search-user-modal.html
@@ -32,7 +32,7 @@
                 </ion-col>
             </ion-row>
         </ion-grid>
-        <div center>
+        <div text-center>
             <xhr-button #xhr round large color="accent" type="submit" (xhrClick)="search($event)">
                 Search
             </xhr-button>
