--- a/src/components/upload-photo/upload-photo.html
+++ b/src/components/upload-photo/upload-photo.html
@@ -1,5 +1,5 @@
 <ion-content>
-	<div center>
+	<div text-center>
 		<div class="frame">
 			<ion-row *ngIf="!image">
 				<ion-col width-50>
@@ -15,7 +15,7 @@
 					</button>
 				</ion-col>
 			</ion-row>
-			<div center *ngIf="isLoading">
+			<div text-center *ngIf="isLoading">
 				<ion-spinner name="crescent"></ion-spinner>
 			</div>
 			<img [src]="'data:image/jpeg;base64,' + image" *ngIf="image">
