--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -26,16 +26,21 @@ tabs{
 				}
 			}
 			.clinic-detail{
-			    display: flex;
-			    box-shadow: 1px 1px 0.8px rgba(0,0,0,0.3);
+			    display: table;
+			    box-shadow: 1.8px 1.8px 3px rgba(0,0,0,0.3);
 			    margin-bottom: 10px;
-			    p{
+			    width: 100%;
+			    padding: 10px 0px 10px 18px;
+			    div{
 		    	    flex: 1;
-				    margin-left: 18px;
+				    display: table-cell;
+				    vertical-align: middle;
+				    p, h5{
+				    	margin: 0;
+				    }
 			    }
 			    ion-icon{
 		    	    font-size: 42px;
-				    padding: 12px;
 				    z-index: 1;
 			    }
 			}
