added draft gui for schedule history

--- a/src/components/add-queue-form-modal/add-queue-form-modal.html
+++ b/src/components/add-queue-form-modal/add-queue-form-modal.html
@@ -1,13 +1,13 @@
 <ion-header>
 	<ion-toolbar color="secondary">
 		<ion-buttons start>
-			<button ion-button icon-only navPop><ion-icon name="close"></ion-icon></button>
+			<button ion-button icon-only clear navPop><ion-icon name="close"></ion-icon></button>
 		</ion-buttons>
 		<ion-title>
 			Add Queue
 		</ion-title>
 		<ion-buttons end>
-			<button ion-button (click)="save()">SAVE</button>
+			<button ion-button clear (click)="save()">SAVE</button>
 		</ion-buttons>
 	</ion-toolbar>
 </ion-header>
