--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,56 +1,49 @@
 tabs{
-	ion-menu{
-		.scroll-content{
-			.side-menu-header{
-				background: $primary-light;
-				display: flex;
-				.img-container{
-					padding: 20px;
-					img{
-						height: 80px;
-						border-radius: 50%;
-					}
-				}
-				.account-detail{
-					flex:1;
-					h4{
-						color: $light;
-					    margin-bottom: 0;
-					    margin-top: 2.7rem;
-					}
-					p{
-						color: $light;
-						margin-top: 0;
-						margin-bottom: 0;
-					}
-				}
-			}
-			.clinic-detail{
-			    display: table;
-			    box-shadow: 1.8px 1.8px 3px rgba(0,0,0,0.3);
-			    margin-bottom: 10px;
-			    width: 100%;
-			    padding: 10px 0px 10px 18px;
-			    div{
-		    	    flex: 1;
-				    display: table-cell;
-				    vertical-align: middle;
-				    p, h5{
-				    	margin: 0;
-				    }
-			    }
-			    ion-icon{
-		    	    font-size: 42px;
-				    z-index: 1;
-			    }
-			}
-			button{
-				ion-icon{
-					margin-right: 15px;
-					font-size: 28px;
-				}
+	.side-menu-header{
+		background: $primary-light;
+		display: flex;
+		.img-container{
+			padding: 20px;
+			img{
+				height: 80px;
+				border-radius: 50%;
 			}
 		}
+		.account-detail{
+			flex:1;
+			h4{
+				color: $light;
+			    margin-bottom: 0;
+			    margin-top: 2.7rem;
+			}
+			p{
+				color: $light;
+				margin-top: 0;
+				margin-bottom: 0;
+			}
+		}
+	}
+	.clinic-detail{
+	    display: table;
+	    box-shadow: 1.8px 1.8px 3px rgba(0,0,0,0.3);
+	    width: 100%;
+	    padding: 10px 0px 10px 18px;
+	    div{
+    	    flex: 1;
+		    display: table-cell;
+		    vertical-align: middle;
+		    p, h5{
+		    	margin: 0;
+		    }
+	    }
+	    ion-icon{
+    	    font-size: 42px;
+		    z-index: 1;
+	    }
+	}
+	ion-menu .scroll-content button ion-icon{
+		margin-right: 15px;
+		font-size: 28px;
 	}
 	.tabbar{
 		background: $primary-light !important;
