implemented edit access roles

--- a/src/components/access-role-modal/access-role-modal.html
+++ b/src/components/access-role-modal/access-role-modal.html
@@ -16,7 +16,7 @@
         <div class="row form-group">
             <ion-grid>
                 <ion-row>
-                    <ion-col col-6 col-sm-6 col-md-6>
+                    <ion-col col-5 col-sm-5 col-md-5>
                         <ion-label class="form-label">Access Role</ion-label>
                         <ion-item clean>
                             <ion-select class="options" name="accessRole" formControlName="accessRole">
@@ -30,6 +30,9 @@
                             <ion-datetime name="roleExpiryDate" formControlName="roleExpiryDate" [min]="getMinDate()">
                             </ion-datetime>
                         </ion-item>
+                    </ion-col>
+                    <ion-col col-1 col-sm-1 col-md-1>
+                        <ion-icon name="close" class="row-icon" *ngIf="roleExpiryDateControl.value" (click)="clearDate(roleExpiryDateControl)" color="accent-dark"></ion-icon>
                     </ion-col>
                 </ion-row>
             </ion-grid>
