screens for patient manager

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -469,3 +469,14 @@ ion-item, button[ion-item]{
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
+
+.speil {
+	padding: 20px;
+	ion-label{
+		white-space: normal;
+	}
+}
+
+.tab-margin {
+	margin-top: 46px;
+}
