refactored forms. screens for patient manager

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -5,26 +5,28 @@
             <ion-item round>
                 <ion-input type="password" formControlName="oldPassword"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="changePasswordForm.get('oldPassword').invalid">
+            <div class="error-message" *ngIf="oldPassword.invalid">
                 {{ errors.oldPassword }}
             </div>
             <ion-label class="form-label">Password *</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="password"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="changePasswordForm.get('password').invalid">
+            <div class="error-message" *ngIf="password.invalid">
                 {{ errors.password }}
             </div>
             <ion-label class="form-label">Re-Type Password *</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="confirm"></ion-input>
             </ion-item>
-            <div class="error-message" *ngIf="changePasswordForm.get('confirm').invalid">
+            <div class="error-message" *ngIf="confirm.invalid">
                 {{ errors.confirm }}
             </div>
         </div>
     </ion-list>
     <div text-center>
-        <xhr-button  #xhr round large color="accent" [disabled]="changePasswordForm.pristine || form.pristine" (xhrClick)="submitForm(xhr)"> Change Password </xhr-button>
+        <xhr-button #xhr round large color="accent" [disabled]="changePasswordForm.pristine || form.pristine" (xhrClick)="submitForm(xhr)">
+            Change Password
+        </xhr-button>
     </div>
 </form>
