refactored forms. fixed doctor field in patien relationship validation

--- a/src/components/forgot-password-modal/forgot-password-modal.html
+++ b/src/components/forgot-password-modal/forgot-password-modal.html
@@ -21,7 +21,7 @@
                         <ion-item round>
                             <ion-input name="username" formControlName="username"></ion-input>
                         </ion-item>
-                        <div class="error-message" *ngIf="forgotPasswordForm.get('username')?.dirty && forgotPasswordForm.get('username').invalid">
+                        <div class="error-message" *ngIf="username.dirty && username.invalid">
                             {{ errors.username }}
                         </div>
                     </ion-col>
