--- a/src/components/account-creation-modal/account-creation-modal.html
+++ b/src/components/account-creation-modal/account-creation-modal.html
@@ -21,7 +21,7 @@
                         <ion-item round>
                             <ion-input name="email" formControlName="email"></ion-input>
                         </ion-item>
-                        <div class="error-message" *ngIf="assistantForm.get('email')?.dirty &&  assistantForm.get('email').invalid">
+                        <div class="error-message" *ngIf="email.dirty &&  email.invalid">
                             {{ errors.email }}
                         </div>
                     </ion-col>
