--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -130,44 +130,11 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-row>
-                            <ion-col col-12 col-sm-12 col-md-12>
-                                <ion-label class="form-label">Birth Date *</ion-label>
-                            </ion-col>
-
-                            <ion-col col-4 col-sm-4 col-md-4>
-                                <ion-item clean>
-                                    <ion-select class="options" name="year" formControlName="year" placeholder="Year" (ionChange)="changeYear()">
-                                        <ion-option *ngFor="let y of years" [value]="y">{{ y }}</ion-option>
-                                    </ion-select>
-                                </ion-item>
-                            </ion-col>
-                            <ion-col col-4 col-sm-4 col-md-4>
-                                <ion-item clean>
-                                    <ion-select class="options" name="month" formControlName="month" placeholder="Month" (ionChange)="changeMonth()">
-                                        <ion-option *ngFor="let m of months" [value]="m">{{ m }}</ion-option>
-                                    </ion-select>
-                                </ion-item>
-                            </ion-col>
-                            <ion-col col-4 col-sm-4 col-md-4>
-                                <ion-item clean>
-                                    <ion-select class="options" name="day" formControlName="day" placeholder="Day">
-                                        <ion-option *ngFor="let d of days" [value]="d">{{ d }}</ion-option>
-                                    </ion-select>
-                                </ion-item>
-                            </ion-col>
-                            <ion-col col-12 col-sm-12 col-md-12>
-                                <div class="error-message" *ngIf="year.dirty &&  year.invalid">
-                                    {{ errors.year }}
-                                </div>
-                                <div class="error-message" *ngIf="month.dirty &&  month.invalid">
-                                    {{ errors.month }}
-                                </div>
-                                <div class="error-message" *ngIf="day.dirty &&  day.invalid">
-                                    {{ errors.day }}
-                                </div>
-                            </ion-col>
-                        </ion-row>
+                        <ion-label class="form-label">Birth Date *</ion-label>
+                        <ion-datetime displayFormat="MMMM DD, YYYY" formControlName="birthDate"></ion-datetime>
+                        <div class="error-message" *ngIf="birthDate.dirty &&  birthDate.invalid">
+                            {{ errors.birthDate }}
+                        </div>
                     </ion-col>
                 </ion-row>
                 <ion-row>
